@startuml
 ' ======= layout =========
 skinparam backgroundColor #fcf9ea
 skinparam titleBorderRoundCorner 15
 skinparam titleFontSize 30
 skinparam classAttributeIconSize 0
 skinparam titleFontName Arial Black
 skinparam titleFontColor #f8a978
 skinparam roundcorner 20
 skinparam stereotypeCBackgroundColor ffc5a1
 skinparam class {

 ArrowColor ffc5a1
 BorderColor White
 BackgroundColor badfdb
 }


 ' ======= title =========
 center header


 endheader
 title <b>US1502 - Class Diagram\n

' ======= classes =========
class TcpSrvOrders{
+run()
+allProducts()
+getSocket()
}
class OrdersService{
+sendMessageToServer(option,data)
+convert(Object ob)
+getSocket()
}
class CheckStatusOfOrdersController{
+getCustomerOrdersStatus()
}
class CheckStatusOfOrdersUI{
}
class CustomerManagementService{
 +CustomerManagementService(customerRepo)
 +registerNewCustomer(firstName,lastName,vat,email,phoneNumber,addresses,gender,birthdate)
 +allCustomers()
 +customerOfIdentity(id)
}
class CustomerRepository{
 +findByUser(SystemUser systemUser)
}
class OrderManagementService{
 +OrderManagementService(orderRepository)
 +addNewOrder(shippingMethod,orderStatus,createdOn,paymentMethod,orderItems,customer)
 +allOrders()
 +orderOfIdentity(code)
 +findByAgvStatus(agvStatus)
 + setOrderAgv(order)
 +findByOrderStatus(orderStatus)
 +setOrderStatus(order)
 +setOrderStatusDelivered(order)
 +findByAgv(AGV)
 +findByCustomerStatus(customer,orderStatus)
 +getOrderRepository()
}


TcpSrvOrders ..> OrdersService
CheckStatusOfOrdersUI ..> CheckStatusOfOrdersController
CheckStatusOfOrdersController ..> OrdersService
OrdersService ..> TcpSrvOrders
CustomerManagementService ..> TcpSrvOrders
CustomerManagementService ..> CustomerRepository
TcpSrvOrders ..> OrderManagementService

@enduml